# monte-carlo-CDT

./: .gitignore  Cargo.toml  README.md  compile.sh  geometry-visualisation.nb  job.sh  job_jesse.sh  job_tom.sh  largeT.sh  run-tests.sh  universe.csv
analysis/: pre-measurements.py
builds/: monte-carlo-cdt
cluster_output/: std_3792032_4294967294.txt  std_721877_0.txt  std_721877_1.txt  std_721877_2.txt  std_721877_3.txt  std_721957_0.txt  std_721957_1.txt  std_721957_2.txt  std_721957_3.txt
data/: data-analysis.py  meas_t1000_l50_n100_r0.4_1641674500.csv  meas_t1000_l50_n100_r0.4_1641674500.json  meas_t100_l40_n5000_r0.4_1640079682.csv  meas_t100_l40_n5000_r0.4_1640079682.json  meas_t100_l40_n500_r0.4_1640079569.csv  meas_t100_l40_n500_r0.4_1640079569.json  meas_t20_l200_n1000_r0.3_1639675655.csv  meas_t20_l200_n1000_r0.3_1639675655.json  meas_t20_l200_n100_r0.4_1641474183.csv  meas_t20_l200_n100_r0.4_1641474183.json  meas_t20_l20_n1000_r0.3_1639673467.csv  meas_t20_l20_n1000_r0.3_1639673467.json  meas_t300_l15_n100_r0.4_1641642557.csv  meas_t300_l15_n100_r0.4_1641642557.json  meas_t30_l200_n100_r0.4_1641474183.csv  meas_t400_l20_n100_r0.4_1641642557.csv  meas_t400_l20_n100_r0.4_1641642557.json  meas_t40_l100_n100000_r0.3_1639905425.json  meas_t40_l100_n50000_r0.3_1639849176.json  meas_t500_l25_n100_r0.4_1641642557.csv  meas_t500_l25_n100_r0.4_1641642557.json  meas_t50_l200_n1000_r0.3_1639675850.csv  meas_t50_l200_n1000_r0.3_1639675850.json  meas_t600_l30_n100_r0.4_1641642557.csv  meas_t600_l30_n100_r0.4_1641642557.json  meas_t60_l200_n100_r0.4_1641474394.csv  (+13 more)
(+148 files in other folders)
