[package]
name = "monte-carlo-cdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
fastrand = "1.5.0"
slotmap = "1.0.6"
serde_json = "1.0.72"
serde = { version = "1.0", features = ["derive"] }